# UnitConversionBot

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  app.py  app.yaml  appengine_config.py  config.py  controller.py  cron.yaml  devRequirements.txt  localConfig.example.py  logo.pxm  model.py  pyproject.toml  requirements.txt  setup.cfg  updateCurrencies.py
.chalice/: config.example.json
.github/workflows/: ci.yml
chalicelib/modules/: converter.py  formatter.py  helpers.py  parser.py  telegram.py
chalicelib/units/: __init__.py  area.py  currencies.py  density.py  fuel_consumption.py  information.py  length.py  mass.py  power.py  pressure.py  speed.py  temperature.py  time.py  torque.py  volume.py
controller/: UpdateRates.py  WebHook.py
model/: expression.py  unit.py
modules/: converter.py  formatter.py  helpers.py  parser.py
scripts/: convert.py  parseLogs.py  stats.py  updateCurrencies.py
static/: description.md  index.html
test/: webhook_test.py
tests/: exchangeRates.json  insertTestData.py  run.py  test_exchange_rates.json
tests/functional/: __init__.py  base.py  convertCommand_test.py  feedbackCommand_test.py  helpCommand_test.py  inline_test.py  startCommand_test.py  updateRates_test.py  webhook_test.py
tests/unit/: __init__.py  converter_test.py  formatter_test.py  parser_test.py
units/: __currenciesTemplate.py  __currencyTemplate.py  __init__.py  area.py  currencies.py  currency.py  density.py  fuel_consumption.py  information.py  length.py  mass.py  power.py  pressure.py  speed.py  temperature.py  time.py  torque.py  volume.py
