[project]
name = "unit-conversion-bot"
version = "0.1.0"
description = "Unit conversion bot for Telegram: https://t.me/UnitConversionBot"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Kirill Maltsev", email = "maltsevkirill@gmail.com"},
]
license = "GPL-3.0"
dependencies = [
    "boto3>=1.38.46",
    "chalice>=1.32.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
